--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="" href="/">
+      <a class="" href="{{ url_for('index') }}">
         <img alt="Brand" src="/static/img/eshop.png">
       </a>
     </div>
@@ -10,12 +10,11 @@
     <div class="navbar-right">
       <div class="btn-group" role="group">
         {% if logueado %}
-       	<a href="perfil/" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
-       
+        <a href="{{ url_for('perfil') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
         {% else %}
- 	<a href="login/" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
-         {% endif %}
-        <a href="carrito" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
+        <a href="{{ url_for('cart') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
+        {% endif %}
+        <a href="{{ url_for('cart') }}" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
       </div>
     </div>
     <div class="navbar-right">
