--- a/sulushop/templates/_views/carrito.html
+++ b/sulushop/templates/_views/carrito.html
@@ -17,45 +17,49 @@ Carrito | {{ super() }}
     <hr style="height:3px;border:none;color:#eee;background-color:#eee;" />
   </strong>
   <div class="container">
-      <!--Inicia bucle de items en el carrito-->
-      {% for producto in productos %}
-      <form action="/" class="form-inline" method="POST">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-sm-2 hidden-xs"><img src="{{ producto[4][0][0] }}" alt="..." class="img-responsive"/></div>
-              <div class="col-sm-100x10010">
-                <h4 class="nomargin">{{ producto[0] }}</h4>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2">
-            {{ producto[1] | round(2,'ceil')}}€
-          </div>
-          <div class="col-md-2">
-            {{ producto[2] }}
-          </div>
-          <div class="col-md-2">
-            <!--<button class="btn btn-default btn-sm" type="submit"><i class="glyphicon glyphicon-refresh"></i></button>-->
-            <button class="btn btn-danger btn-sm" type="submit"><i class="glyphicon glyphicon-trash"></i></button>
-          </div>
-        </div>
-        <hr style="height:3px;border:none;color:#eee;background-color:#eee;" />
-      </form>
-      {% endfor  %}
-      <!--Fin bucle de items en el carrito-->
-
+    <!--Inicia bucle de items en el carrito-->
+    {% for producto in productos %}
+    <form action="{{ url_for('delete_cart') }}" class="form-inline" method="POST">
       <div class="row">
         <div class="col-md-6">
-          <a href="/" class="btn btn-warning"><i class="faa fa-angle-left"></i> Continuar comprando</a>
+          <div class="row">
+            {% if producto[0].picture %}
+            <div class="col-sm-2 hidden-xs"><img src="{{ producto[0].picture }}" alt="..." class="img-responsive"/></div>
+            {% endif %}
+            <div class="col-sm-100x10010">
+              <h4 class="nomargin">{{ producto[0].nombre }}</h4>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2 offset-md-3">
-          <strong>Total {{ 4.155 | round(2,'ceil') }}€</strong>
+        <div class="col-md-2">
+          {{ producto[0].total | round(2,'ceil')}}€
         </div>
-        <div class="col-md-2 offset-md-3">
-          <a href="carrito?buy=True" class="btn btn-success btn-block">Comprar <i class="fa fa-angle-right"></i></a>
+        <div class="col-md-2">
+          {{ producto.cantidad }}
+        </div>
+        <div class="col-md-2">
+          <input type="hidden" name="pk" value="{{ producto[0].id }}">
+          <button class="btn btn-danger btn-sm" type="submit"><i class="glyphicon glyphicon-trash"></i></button>
         </div>
       </div>
+      <hr style="height:3px;border:none;color:#eee;background-color:#eee;" />
+    </form>
+    {% endfor  %}
+    <!--Fin bucle de items en el carrito-->
+
+    <div class="row">
+      <div class="col-md-6">
+        <a href="{{ url_for('index') }}" class="btn btn-warning"><i class="faa fa-angle-left"></i> Continuar comprando</a>
+      </div>
+      <div class="col-md-2 offset-md-3">
+        <strong>Total {{ total | round(2,'ceil') }}€</strong>
+      </div>
+      <div class="col-md-2 offset-md-3">
+        <form action="{{ url_for('delete_all_cart') }}" class="form-inline" method="POST">
+          <button class="btn btn-success btn-block">Comprar <i class="fa fa-angle-right"></i></button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
