--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -9,9 +9,11 @@
     <p class="navbar-text">SuluShop company</p>
     <div class="navbar-right">
       <div class="btn-group" role="group">
-        {% if logueado %}
-        <a href="{{ url_for('perfil') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
+        {% if current_user.is_authenticated %}
+        <!--TODO: change url for to perfil-->
+        <a href="{{ url_for('cart') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
         {% else %}
+        <!--TODO: change url for to login-->
         <a href="{{ url_for('cart') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
         {% endif %}
         <a href="{{ url_for('cart') }}" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
