--- a/sulushop/templates/_layouts/base.html
+++ b/sulushop/templates/_layouts/base.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     {% include "_modules/nav.html" %}
+    {% include "_modules/notifications.html" %}
     {% block content %}
     <h1>hello world</h1>
     {% endblock %}
