--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -10,15 +10,9 @@
     <div class="navbar-right">
       <div class="btn-group" role="group">
         {% if current_user.is_authenticated %}
-        <!--TODO: change url for to perfil-->
-        <a href="{{ url_for('cart') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
+        <a href="{{ url_for('perfil') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
         {% else %}
-<<<<<<< HEAD
-        <a href="{{ url_for('login') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
-=======
-        <!--TODO: change url for to login-->
-        <a href="{{ url_for('cart') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
->>>>>>> e2c52ea00cf4ea81cf1fc797cd4ed0c659f3a1d8
+        <a href="{{ url_for('regLog') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
         {% endif %}
         <a href="{{ url_for('cart') }}" class="btn btn-warning navbar-btn glyphicon glyphicon-shopping-cart"></a>
       </div>
