--- a/sulushop/templates/_views/perfil.html
+++ b/sulushop/templates/_views/perfil.html
@@ -7,151 +7,112 @@ Perfil | {{ super() }}
 
 {% block content %}
 <div class="container-fluid">
-	<div class="row">
-	</div>
-	<div class="row">
-		<div class="col-md-8">
-			<h1 class="text-left">
-				Mi Perfil.
-			</h1>
-			<hr>
-			<div class="row">
+  <div class="row">
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <h1 class="text-left">
+        Mi Perfil
+      </h1>
+      <hr>
+      <div class="row">
 
-				<div class="col-md-3">
-					<img alt="Bootstrap Image Preview" src="{{user.imagen}}"/ width=200 height=200><br/></br>
-				<button type="file" class="btn btn-default">Cambiar imagen...</button>
-				</div>
-				<div class="col-md-9">
-				
-					<p><b>Nombre:</b><br>{{user.nombre}}<br></p>
-					<p><b>Apellidos:</b><br>{{user.apellidos}}<br></p>
-					<p><b>Fecha de nacimiento:</b><br>{{ user.fecha_nacimiento}}<br></p>
-					<p><b>Direccion:</b><br>{{ user.direccion }}<br></p>
-					<p><b>Telefono:</b><br>{{user.telefono}}<br></p>
-					<p><b>E-mail:</b><br>{{user.email}}<br></p>
+        <div class="col-md-3">
+          <img alt="Bootstrap Image Preview" src="{{user.imagen}}"/ width=200 height=200><br/></br>
+          <button type="file" class="btn btn-default">Cambiar imagen...</button>
+        </div>
+        <div class="col-md-9">
 
-					<br/><a href="contraseña.html"><button type="button" class="btn btn-default">Cambiar contrasena</button>
-					<a href="modificar.html"><button type="button" class="btn btn-default">Modificar datos</button></a>
-					<br/><a href="/deletUser/">Eliminar cuenta</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-<!--ACTIVIDAD DEL USUARIO-->
-			<h3>
-				Actividad.
-			</h3>
-			<hr>
-			<table class="table">
-				<thead>
-					<tr>
-						<th>
-							Tipo
-						</th>
-						<th>
-							Fecha
-						</th>
-						<th>
-							Producto
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="active">
-						<td>
-							<img src="https://docs.gimp.org/2.2/images/dialogs/dialogs-icon-eye.png"/>
-						</td>
-						<td>
-							01/04/2012
-						</td>
-						<td>
-							smartphone generico
-						</td>
-					</tr>
-					<tr class="active">
-						<td>
-							<img src="https://docs.gimp.org/2.2/images/dialogs/dialogs-icon-eye.png"/>
-						</td>
-						<td>
-							01/04/2012
-						</td>
-						<td>
-							pizza sabrosa
-						</td>
-					</tr>
-					<tr class="active">
-						<td>
-							<img src="http://www.alfombraskilim.com/themes/kilim/images/ico_estrella_off.png"/>
-						</td>
-						<td>
-							02/04/2012
-						</td>
-						<td>
-							sentido de la vida
-						</td>
-					</tr>
-					<tr class="active">
-						<td>
-							<img src="http://www.cosmoeducacion.com/images/2016/cursos/iconos/dolar.png"/>
-						</td>
-						<td>
-							03/04/2012
-						</td>
-						<td>
-							producto rebajado
-						</td>
-					</tr>
-					<tr class="active">
-						<td>
-							<img src="http://www.alfombraskilim.com/themes/kilim/images/ico_estrella_off.png"/>
-						</td>
-						<td>
-							04/04/2012
-						</td>
-						<td>
-							mas pizza
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
-	<hr>
-	<div class="row">
-		<div class="col-md-6">
-			<h2>Lista de deseados</h2>
-			<hr>
-			<table class="table">
-				<thead>
-					<tr>
-						<th class="col-md-4">
-							Imagen
-						</th>
-						<th class="col-md-8">
-							Producto
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr class="active">
-						<td>
-							<img src="http://www.carritus.com/images/images_pms/04/28524304.jpg"/>
-						</td>
-						<td>
-							mas pizza
-						</td>
-					</tr>
-					<tr class="active">
-						<td>
-							<img src="http://espaciodereflexion.com.ar/psicologo/sentido-de-la-vida-150x150.jpg"/>
-						</td>
-						<td>
-							sentido de la vida
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
+          <p><b>Nombre:</b><br>{{user.nombre}}<br></p>
+          <p><b>Apellidos:</b><br>{{user.apellidos}}<br></p>
+          <p><b>Fecha de nacimiento:</b><br>{{ user.fecha_nacimiento}}<br></p>
+          <p><b>Direccion:</b><br>{{ user.direccion }}<br></p>
+          <p><b>Telefono:</b><br>{{user.telefono}}<br></p>
+          <p><b>E-mail:</b><br>{{user.email}}<br></p>
+
+          <br/><a href="contraseña.html"><button type="button" class="btn btn-default">Cambiar contrasena</button>
+            <a href="modificar.html"><button type="button" class="btn btn-default">Modificar datos</button></a>
+            <br/><a href="/deletUser/">Eliminar cuenta</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <!--ACTIVIDAD DEL USUARIO-->
+      <h3>
+        Actividad
+      </h3>
+      <hr>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>
+              Tipo
+            </th>
+            <th>
+              Fecha
+            </th>
+            <th>
+              Producto
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for object in action %}
+          <tr class="active">
+            <td>
+              <!--<img src="https://docs.gimp.org/2.2/images/dialogs/dialogs-icon-eye.png"/>-->
+              {{ object[0].accion }}
+            </td>
+            <td>
+              {{ object.fecha }}
+            </td>
+            <td>
+              {{ object[0].nombre }}
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+  {% if favorites %}
+  <div class="container">
+    <h2>Lista de deseados</h2>
+    <strong>
+      <div class="row">
+        <div class="col-md-6">Producto</div>
+        <div class="col-md-3">Fecha</div>
+        <div class="col-md-3">Eliminar</div>
+      </div>
+      <hr style="height:3px;border:none;color:#eee;background-color:#eee;" />
+    </strong>
+    {% for producto in favorites %}
+    <form action="{{ url_for('delete_from_list') }}" class="form-inline" method="POST">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            {% if producto[0].picture %}
+            <div class="col-sm-2 hidden-xs"><img src="{{ producto[0].picture }}" alt="..." class="img-responsive"/></div>
+            {% endif %}
+            <div class="col-sm-100x10010">
+              <h4 class="nomargin">{{ producto[0].nombre }}</h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          {{ producto.fecha}}
+        </div>
+        <div class="col-md-3">
+          {{ form.hidden_tag() }}
+          {{ form.pk(type="hidden", value=producto[0].id) }}
+          {{ form.name(type="hidden", value=producto[0].nombre) }}
+          <button class="btn btn-danger btn-sm" type="submit"><i class="glyphicon glyphicon-trash"></i></button>
+        </div>
+      </div>
+      <hr style="height:3px;border:none;color:#eee;background-color:#eee;" />
+    </form>
+    {% endfor  %}
+  </div>
+  {% endif %}
 </div>
 {% endblock %}
