--- a/sulushop/templates/_views/registro_login.html
+++ b/sulushop/templates/_views/registro_login.html
@@ -54,7 +54,7 @@ Registro Login | {{ super() }}
 										<input class="form-control" id="userRegistro_direccion" name="userLogin[direccion]" value="{{saves.get('userLogin[direccion]', '')}}" required="required" placeholder="Direccion" type="text">
 									</div>
 									<div class="form-group">
-										<input class="form-control" id="userRegistro_telefono" name="userLogin[telefono]" value="{{saves.get('userLogin[telefono]', '')}}" value="{{saves.get('userLogin[]', ' ')}}" required="required" placeholder="Telefono" type="text">
+										<input class="form-control" id="userRegistro_telefono" name="userLogin[telefono]" value="{{saves.get('userLogin[telefono]', '')}}" required="required" placeholder="Telefono" type="text">
 									</div>
 									<div class="form-group">
 										<input class="form-control" id="userRegistro_email" name="userLogin[email]" value="{{saves.get('userLogin[email]', '')}}" required="required" placeholder="Email" type="email">
