--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -9,7 +9,7 @@
     <p class="navbar-text">SuluShop company</p>
     <div class="navbar-right">
       <div class="btn-group" role="group">
-        {% if current_user.is_authenticated %}
+        {% if session.logged_in %}
         <a href="{{ url_for('perfil') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
         {% else %}
         <a href="{{ url_for('regLog') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
