--- a/sulushop/templates/_modules/modificar.html
+++ b/sulushop/templates/_modules/modificar.html
@@ -1,7 +1,7 @@
 {% extends "_layouts/base.html" %}
 
 {% block title %}
-Registro Login | {{ super() }}
+Modificar | {{ super() }}
 {% endblock %}
 
 
@@ -17,35 +17,38 @@ Registro Login | {{ super() }}
 				<div class="col-md-3">
 					<img alt="Bootstrap Image Preview" src="{{user.imagen}}"/ width=200 height=200><br/>
 				</div>
-				<div class="col-md-9">
+				<div class="col-md-7">
+					<div class="container-fluid">
 					<form name="modificar" method="POST" action="{{ url_for( 'mod_datos' ) }}">
+						<div>
   <div class="form-group">
     <label for="exampleInputName">Nombre</label>
-    <input class="form-control" id="userRegistro_nombre" name="userLogin[nombre]" value="{{saves.get('userLogin[nombre]', '')}}" required="required" placeholder="Nombre" type="text">
-  </div>
+		{{ registroForm.nombre(class="form-control", id="userRegistro_nombre", value=saves.get('nombre', ''), required="required", placeholder="Nombre", type="text")}}
+	</div>
   <div class="form-group">
     <label for="exampleInputApellidos">Apellidos</label>
-    <input class="form-control" id="userRegistro_apellidos" name="userLogin[apellidos]" value="{{saves.get('userLogin[apellidos]', '')}}" required="required" placeholder="Apellidos" type="text">
+		{{ registroForm.apellidos(class="form-control", id="userRegistro_apellidos", value=saves.get('apellidos', ''), required="required", placeholder="Apellidos", type="text")}}
 	</div>
 <div class="form-group">
     <label for="exampleInputFecha">Fecha</label>
-		<input class="form-control" id="userRegistro_nacimiento" name="userLogin[nacimiento]" value="{{saves.get('userLogin[nacimiento]', '')}}" required="required" placeholder="Año Nacimiento" type="text">
-  </div>
+		{{ registroForm.nacimiento(class="form-control", id="userRegistro_nacimiento", value=saves.get('nacimiento', ''), required="required", placeholder="Año Nacimiento", type="text")}}
+	</div>
 	<div class="form-group">
     <label for="exampleInputDireccion">Direccion</label>
-    <input class="form-control" id="userRegistro_direccion" name="userLogin[direccion]" value="{{saves.get('userLogin[direccion]', '')}}" required="required" placeholder="Direccion" type="text">
-  </div>
+		{{ registroForm.direccion(class="form-control", id="userRegistro_direccion", value=saves.get('direccion', ''), required="required", placeholder="Direccion", type="text")}}
+	</div>
 	<div class="form-group">
     <label for="exampleInputTelefono">Telefono</label>
-    <input class="form-control" id="userRegistro_telefono" name="userLogin[telefono]" value="{{saves.get('userLogin[telefono]', '')}}" required="required" placeholder="Telefono" type="text">
-  </div>
+		{{ registroForm.telefono(class="form-control", id="userRegistro_telefono", value=saves.get('telefono', ''), required="required", placeholder="Telefono", type="text")}}
+	</div>
 	<div class="form-group">
     <label for="exampleInputEmail1">E-mail</label>
-    <input class="form-control" id="userRegistro_email" name="userLogin[email]" value="{{saves.get('userLogin[email]', '')}}" required="required" placeholder="Email" type="email">
-  </div>
+		{{ registroForm.email(class="form-control", id="userLogin_email", value=saves.get('email', ' '), required="required", placeholder="Email", type="email") }}
+	</div>
+	</div>
   <button type="submit" class="btn btn-default">Guardar Cambios</button></br>
 	<a href="/perfil/"></br><button class="btn btn-default">Cancelar</button></a>
-</form>
+	</form>
+</div>
 
-		
 {% endblock %}
