--- a/sulushop/templates/_views/lista.html
+++ b/sulushop/templates/_views/lista.html
@@ -8,161 +8,29 @@ Lista de productos | {{ super() }}
 {% block content %}
 <div class="container">
   <h1>Listado de productos</h1>
-  {% for producto in productos%}
-  <p>
-  {{ producto[1]}}
-  </p>
-  {% endfor %}
-
   <div class="jumbotron">
     <div class="row">
-
-      <!--Articulo1-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list1.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>Memoria 16GB</h4>
-              <h4>4<span class="small">,95€</span></h4>
-            </a>
-            <p>
-            <a href="" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo2-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list2.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>Weimei We 16GB</h4>
-              <h4>120<span class="small">€</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo3-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list3.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>Maizu M3 Note 16GB</h4>
-              <h4>170<span class="small">€</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo4-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list4.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4> 750 Evo SSD 250GB</h4>
-              <h4>70<span class="small">,95</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo5-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list5.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>MP3 MicroSD</h4>
-              <h4>7<span class="small">,90€</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo6-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list6.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>MP3 Clip Mint</h4>
-              <h4>23<span class="small">,50€</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo7-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list6.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>MP3 Clip Mint Verde</h4>
-              <h4>22<span class="small">€</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!--Articulo8-->
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <a href="detalle.html" class="">
-            <img src="../../static/img/obj_list5.jpg" alt="imagen">
-          </a>
-          <div class="caption">
-            <a href="detalle.html" class="">
-              <h4>MP3 Varios Colores</h4>
-              <h4>8<span class="small">€</span></h4>
-            </a>
-            <p>
-            <a href="detalle.html" class="btn btn-primary" role="button">Añadir a carrito</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
+		{% paginate productos by 5 %}
+			{% for producto in productos%}
+			  <div class="col-md-3">
+				<div class="thumbnail">
+				  <a href={{producto.url}} class="">
+					<img src={{producto.picture}} alt="imagen">
+				  </a>
+				  <div class="caption">
+					<a href={{producto.url}} class="">
+					  <h4>{{producto.nombre}}</h4>
+					  <h4>{{producto.precio}}</h4>
+					</a>
+					<p>
+					<a href="" class="btn btn-primary" role="button">Añadir a carrito</a>
+					</p>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  {% endfor %}
+		{% endpaginate %}
   </div>
 </div>
 {% endblock %}
