--- a/sulushop/static/css/style.css
+++ b/sulushop/static/css/style.css
@@ -24,9 +24,25 @@ footer{
 }
 
 #hearts{
-color: #ee8b2d;
+  color: #ee8b2d;
 }
 
 #hearts-existing{
-color: #ee8b2d;
+  color: #ee8b2d;
+}
+
+.pagination-page-info {
+  padding: .6em;
+  padding-left: 0;
+  width: 40em;
+  margin: .5em;
+  margin-left: 0;
+  font-size: 12px;
+}
+.pagination-page-info b {
+  color: black;
+  background: #6aa6ed;
+  padding-left: 2px;
+  padding: .1em .25em;
+  font-size: 150%;
 }
