--- a/sulushop/templates/_views/perfil.html
+++ b/sulushop/templates/_views/perfil.html
@@ -66,7 +66,7 @@ Perfil | {{ super() }}
           {% for object in action %}
           <tr class="active">
             <td>
-              <img src="static/img/{{ object.accion }}.png" style="width: 50px;"/>
+              <img src="static/img/{{ object.accion | lower }}.png" style="width: 25px;"/>
             </td>
             <td>
               {{ object.fecha }}
