--- a/sulushop/templates/_modules/nav.html
+++ b/sulushop/templates/_modules/nav.html
@@ -11,6 +11,7 @@
       <div class="btn-group" role="group">
         {% if session.email %}
         <a href="{{ url_for('perfil') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Perfil</a>
+        <a href="{{ url_for('loggout') }}" class="btn btn-default navbar-btn glyphicon glyphicon-logout"> logout</a>
         {% else %}
         <a href="{{ url_for('regLog') }}" class="btn btn-default navbar-btn glyphicon glyphicon-user"> Login</a>
         {% endif %}
